chore: fix @auth/core version and set up Convex deployment
Upgrade @auth/core 0.34.3 -> 0.37.0 (peer dep of @convex-dev/auth)
Remove DataModel generic from convexAuth() call
Deploy schema to Convex (coordinated-manatee-656)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"format": "bunx @biomejs/biome format --write ."
 	},
 	"dependencies": {
-		"@auth/core": "^0.34.3",
+		"@auth/core": "0.37.0",
 		"@convex-dev/auth": "^0.0.90",
 		"@hookform/resolvers": "^5.2.2",
 		"class-variance-authority": "^0.7.1",
