--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@auth/core": "0.37.0",
 		"@convex-dev/auth": "^0.0.90",
 		"@hookform/resolvers": "^5.2.2",
+		"@tanstack/react-virtual": "^3.13.19",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"convex": "^1.32.0",
 		"lucide-react": "^0.575.0",
 		"next": "^16.1.6",
 		"next-themes": "^0.4.6",
+		"nuqs": "^2.8.8",
 		"radix-ui": "^1.4.3",
 		"react": "^19.2.4",
 		"react-dom": "^19.2.4",
